# feodorov-tvp-lab1

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cycle.f  cycle.f95  recursion.f  recursion.f95
test/: CMakeLists.txt  lab1.f  lab1.f95  test2.f95
